--- a/nbdev-env/00_core.ipynb
+++ b/nbdev-env/00_core.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| hide\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp core"
+    "#| default_exp core"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| hide\n",
     "from fastcore.test import *\n",
     "from nbdev.showdoc import *"
    ]
@@ -43,10 +43,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "meftadata": {},
    "outputs": [],
    "source": [
-    "# hide\n",
+    "#| hide\n",
     "from nbdev.export import notebook2script\n",
     "\n",
     "notebook2script()"
@@ -58,6 +58,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
