--- a/nbdev-env/00_core.ipynb
+++ b/nbdev-env/00_core.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "meftadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in atexit callback: <bound method InteractiveShell.atexit_operations of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x7f9f06c2e800>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/loper/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3809, in atexit_operations\n",
+      "  File \"/home/loper/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3788, in _atexit_once\n",
+      "  File \"/home/loper/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 1371, in reset\n",
+      "  File \"/home/loper/.local/lib/python3.10/site-packages/IPython/core/history.py\", line 594, in reset\n",
+      "  File \"/usr/local/lib/python3.10/pathlib.py\", line 993, in cwd\n",
+      "    return cls(cls._accessor.getcwd())\n",
+      "FileNotFoundError: [Errno 2] No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
-    "from nbdev.export import notebook2script\n",
+    "import nbdev\n",
     "\n",
-    "notebook2script()"
+    "nbdev.nbdev_export()"
    ]
   }
  ],
@@ -69,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
