--- a/nbdev-env/xx_template.ipynb
+++ b/nbdev-env/xx_template.ipynb
@@ -47,9 +47,9 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from nbdev.export import notebook2script\n",
+    "import nbdev\n",
     "\n",
-    "notebook2script()"
+    "nbdev.nbdev_export()"
    ]
   }
  ],
@@ -69,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
